<resources>
    <string name="app_name">Lista de compras</string>
    <string name="title_home">Lista de compras</string>
    <string name="title_market_list">mercado</string>
    <string name="title_notifications">Notificaciones</string>

    <string name="text_product">Producto</string>
    <string name="text_price">Precio</string>
    <string name="text_quantity">Cantidad</string>
    <string name="product">Producto</string>
    <string name="value">0</string>
    <string name="quantity">0</string>
    <string name="text_total">Total: %1$s</string>
    <string name="apply">Agregar</string>
    <string name="please_fill_all_fields">Por favor complete todos los campos.</string>
    <string name="the_product_entered_is_not_valid">El producto ingresado no es válido</string>
</resources>