<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.shoppinglist.application.shoppinghome.view.ShoppingHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_market_list"
        android:name="com.example.shoppinglist.application.marketlist.view.MarketListFragment"
        android:label="@string/title_market_list"
        tools:layout="@layout/fragment_market_list" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.shoppinglist.application.notifications.view.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_pop"
            app:popUpTo="@id/navigation_notifications"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>