<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle_background"
    app:strokeColor="@android:color/black"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/box_name_of_product"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLength="15"
        android:hint="@string/product"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/black"
        android:textColorHint="#90232323"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/box_price"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/box_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:digits="0123456789.,"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:hint="@string/text_price"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/black"
        android:textColorHint="#90232323"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/box_quantity"
        app:layout_constraintStart_toEndOf="@+id/box_name_of_product"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/box_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:digits="0123456789.,"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:hint="@string/text_quantity"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/black"
        android:textColorHint="#90232323"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/box_price" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_new_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:textColor="@color/black"
        android:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box_quantity" />
</androidx.constraintlayout.widget.ConstraintLayout>